--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ rel="stylesheet"
               <div class="test-profile">
                 <div class="row">
                   <div
-                    class="test-image col-2"
+                    class="test-image col-2 col-md-2"
                     style="background-image: url('./images/staff-2.jpg')"
                   ></div>
                   <div class="test-info col-md-5 col-7">
@@ -701,7 +701,7 @@ rel="stylesheet"
               <div class="test-profile">
                 <div class="row">
                   <div
-                    class="test-image col-2"
+                    class="test-image col-2 col-md-2"
                     style="background-image: url('./images/staff-2.jpg')"
                   ></div>
                   <div class="test-info col-md-5 col-7">
@@ -725,7 +725,7 @@ rel="stylesheet"
               <div class="test-profile">
                 <div class="row">
                   <div
-                    class="test-image col-2"
+                    class="test-image col-2 col-md-2"
                     style="background-image: url('./images/staff-2.jpg')"
                   ></div>
                   <div class="test-info col-md-5 col-7">
@@ -750,7 +750,7 @@ rel="stylesheet"
               <div class="test-profile">
                 <div class="row">
                   <div
-                    class="test-image col-2"
+                    class="test-image col-2 col-md-2"
                     style="background-image: url('./images/staff-2.jpg')"
                   ></div>
                   <div class="test-info col-md-5 col-7">
@@ -956,7 +956,7 @@ rel="stylesheet"
         <div class="tagline" data-aos="fade-up">Price & Plans</div>
         <div class="title" data-aos="fade-up">Choose Your Perfect Plans</div>
         <div class="row gap-5" style="justify-content: center;">
-          <div class="package-card col-12 col-md-2 pb-4" data-aos="fade-up">
+          <div class="package-card col-12 col-md-3 pb-4" data-aos="fade-up">
             <div class="icon-container">
               <img class="w-100" src="./images/house.png" alt="" />
             </div>
@@ -976,7 +976,7 @@ rel="stylesheet"
             </div>
           </div>
 
-          <div class="package-card col-12 col-md-2 pb-4" data-aos="fade-up">
+          <div class="package-card col-12 col-md-3 pb-4" data-aos="fade-up">
             <div class="icon-container">
               <img class="w-100" src="./images/house.png" alt="" />
             </div>
@@ -996,7 +996,7 @@ rel="stylesheet"
             </div>
           </div>
 
-          <div class="package-card col-12 col-md-2 pb-4" data-aos="fade-up">
+          <div class="package-card col-12 col-md-3 pb-4" data-aos="fade-up">
             <div class="icon-container">
               <img class="w-100" src="./images/house.png" alt="" />
             </div>
@@ -1016,7 +1016,7 @@ rel="stylesheet"
             </div>
           </div>
 
-          <div class="package-card col-12 col-md-2 pb-4" data-aos="fade-up">
+          <div class="package-card col-12 col-md-3 pb-4" data-aos="fade-up">
             <div class="icon-container">
               <img class="w-100" src="./images/house.png" alt="" />
             </div>
